--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,windows,libreoffice
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,windows,libreoffice
 
+backend
+
+
 ### LibreOffice ###
 # LibreOffice locks
 .~lock.*#
